Added a new endpoint for posting a new establishment
